--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/44a3334728.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="parent"> 
       
     <div class="block"></div>
     <hr>
-    <div class="block1">
+    <div class="block1" >
         <h2>Systems</h2>
-
     </div>
     <div class="block2">
         
